--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FIMPLY | One page HTML template</title>
+    <title>Mkay4real | Fullstack Developer</title>
 
     <!--Google web fonts-->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,300italic,400italic,600,700,600italic,200,200italic' rel='stylesheet' type='text/css'>    
@@ -42,7 +42,7 @@
 
 <header class="main_header">
   <div class="row">
-    <div class="content"> <a class="logo" href="#">FIMPLY</a>
+    <div class="content"> <a class="logo" href="#">Mkay4real</a>
       <div class="mobile-toggle"> <span></span> <span></span> <span></span></div>
       <nav>
         <ul class="main_menu">
